# nittei

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  Nittei.sln  README.md  alpine.Dockerfile  alpineWithDD.Dockerfile  biome.json  debian.Dockerfile  debianWithDD.Dockerfile  index.yaml  justfile  musl.Dockerfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
bins/nittei/: Cargo.toml
bins/nittei/src/: backtrace.rs  lib.rs  main.rs  telemetry.rs
bins/nittei/tests/: api.rs  api_ical_export.rs  api_loadtests.rs  api_recurring_events.rs  collective_team_scheduling.rs  group_team_scheduling.rs  round_robin_scheduling.rs
clients/rust/: Cargo.toml
clients/rust/src/: account.rs  base.rs  calendar.rs  event.rs  lib.rs  schedule.rs  service.rs  status.rs  user.rs
crates/api/: Cargo.toml
crates/api/src/: error.rs  http_logger.rs  job_schedulers.rs  lib.rs
crates/api_structs/: Cargo.toml
crates/api_structs/src/: lib.rs
crates/domain/: Cargo.toml
crates/domain/src/: account.rs  booking_slots.rs  calendar.rs  event.rs  event_group.rs  event_instance.rs  ical.rs  lib.rs  reminder.rs  schedule.rs  service.rs  timespan.rs  user.rs
crates/infra/: Cargo.toml
crates/infra/.sqlx/: query-0088c2b930980add3076ab20ad0013fbc1f2a5c828edb319edab1b2d291db878.json  query-0165a2e676f6f5f9c8d01d3907d38e566ba1619b3fc912d982be6c39172916cd.json  query-01c7629693fa6c6da5f2c4e23ea212b2a31f6fdb16dd34d97b38be485b9eee53.json  query-04752eb8015b9333981bc966d56eead8f4690d55c3c1d1dc03616f88731e63ee.json  query-06afb512ef2ce3cc1b33d52d0b7fb9c44aff3e9cb644d51261ce174321ce76b6.json  query-06df3ceb9d4cb19181312733eff427005768ac1df02c3c219242996daff2d6fe.json  query-07345ca478eb4f2dd4138cf8e65f0f773ac1f8f549d0cf7dbcbc655aa9e95c65.json  query-07bbb4519fab60fc29dbec27e4659286fafdad6762d996d5aecd466069198320.json  query-08f529983a15245d39a63705bf39030887a9ec730f864b6a09acfb711f27552c.json  query-09b143b23b68a8ad8a51ff93d35cd81558dd14202fcfc2d1e2a65307a9173ca9.json  query-09e9d9301a69be6bfe1e558fe7e9473c40af70dc79441291c72ec2922a2cbf95.json  query-0d960e2d937593a1b4b3a6a84d13797509d21efb1303daecf07dde6d7802c4f4.json  query-0ea46c7b8f97454ee14b60f285de1121b5e3ef576e6c83597cffd0d62027cadb.json  query-0f49b3cd8c6e3f8a0b212bd04ccb61b3a2ddd198e11b43424fa9d18a82c403d0.json  query-105b965345ce214b9959983ccf2e50d860d0eed56bccdaba824ac46d178fdd14.json  query-12e4cb314134f5167c2b5bfc3b42c90494a1dd89813b0dd9b0e858ffdcec8083.json  query-1514d9b1913915f25f9c81da90f30024b920962a9c288d3fc574a3bcb5edeac1.json  query-1779e4225c3d7e3d5e8290ff58224c1fe29ae3c9a864b0697aeed1574b2358b5.json  query-18a6fa63a05e6ae73d58e16587f5f0dc54b2229f7a677fef9d5851cd2f5c1eef.json  (+197 more)
scheduler/: Cargo.toml  debian.Dockerfile  musl.Dockerfile  rustfmt.toml
scheduler/.config/: nextest.toml
scheduler/.sqlx/: query-0dacc11cdd273495684aa5e443e3c147df1c1f8a07410f3c898457fc799f0ff8.json  query-0f9c23be358c85395de95ec8ff022cb707dc573613319616c68236d05698f6ee.json  query-1e32988145ea1469f8ff829cf730efdffe5df38d47b400eacc46da34ad448230.json  query-20a12bb5364ce87f8210848b3aeba7d2c052ddfb8c34eec947f1c9e50ccc8433.json  query-24322e3d37c86aa36e8929fd6a9b32f6a18c49e352b9e5bcfe289eb7b686a0de.json  query-2b1765170962e8f38559d83c5b63514bdaecdd3183ba5b0f17e849594432fab2.json  query-2d199107909cb8715839719d4bab21c355fc58f088b441a83d9d8f507eede5f9.json  query-2d95094ca505894b71df11bdb89e0f1cd2ce3f110f52cbecb594cac37d1a99d9.json  query-314524dce5378809d1312a5f02a365ae2f9973fecfb978246d7bd842c799fc13.json  query-32a7a36ecbd376ad6f1ab7b3c9eac583b40dacfb0e1d29482ef21251a4abedcc.json  query-386895f60dd59c5a0a56e75c279d632e9709b17760a5250d47031d84a01ad548.json  query-3f602e58d6e5ee486a478708c57857ecda868db3abd1001a642c30549cb487b5.json  query-472cbfe614d8a7d9b08fdd923beaec7eecc9714b18617ea78950bba786a23fcc.json  query-48e71f8203340b5c7289e22a7b2f2b48b20e3c1dc7b95d666c314475dfc3edbe.json  query-501ef13a11ba2faacadd9a0dc484abdef01b81c9bba68250ed6ca2766be91adf.json  query-5b223b3849966fda1ec7af92d83978447adbcd969f1effd4b6ce7d2f54647c23.json  query-65f6fb803da0e49b5227141ad199adaebd82c0c57313ad0479fcaa51ac4b33a0.json  query-686f317557a796abdb3aa254b70207229da12ba7bdef3115c621e3bc2e418ea3.json  query-6d8b17be58e55bd6c51aef757655973d637db2af2519cf59aa8a3b1ad9278308.json  query-6e9abee004bec4764af09d284ca68fc8432eeb8c6707a73e5e05c7a47ad305d0.json  query-73ac00605d94f10c985f0eb0b2093532da6d6d4cd06a5cc9005c2b2e4569f6b7.json  query-75f42aa0640ca38b8ae68d8e2950a5403a9a791d093237a5366e566773997de8.json  query-77455db78470e7adb3b0dff75b274e760ebdf6cf58d6da75940a381180ca0777.json  query-865bffa5f07eaed5e91e395511d19176792af89a8bc3d64c96f0fc4a2e68e583.json  query-958a5a5647b498b993e199c97df2888081de35f5d0909745c08697d2bb4b2ad6.json  query-968fca0a646464c9e5fc5400764499a47bd4af9bb4ee0d0b09555e3e8fec1ce2.json  query-a0de3aebf02766d0d00717faa9ce79e9e561e0aebe247b8678955162aaa0bbb0.json  query-a44333a52c7262353a57ddb58d99fde9ee7db2479abc0f43e4deaa0e5ad3362a.json  query-a7e2404b4557dabb3190ef0dbd0d14247411bc917e3b3ecb37c06e0af59e9d62.json  query-ad6ef2659ed0171e4d232c3644985f1e6e7ec139c11fd9fd88d7d5b8f5025f0e.json  query-ae40f0f5299e2487a4b1417bfecd4000b149be7e46b5bd81108b8d2297d0eb53.json  query-b6cf4fb5085d029b314caf5aca6d857598dce67c3e74f98b7f3b63e3ae9b2f2d.json  query-c1c2d4d22bfcd845605226f7ffbcc0d181afee7bed99be749ea90e20e4677395.json  query-c31bbc907c6a574a36403fe24e287c149c46464ee331d4ffb96bb0b3f279ef83.json  query-c8eaa759c793a7a6d143ad2281e0c9326b88bafce0a9dc2ff42725fe5421a4ec.json  query-d59f7d88f988149254292ab6faa175a965fe7fa0cc9c45a42160997199c78114.json  query-d9639a70dc9acac3b7366859eb70c24b9781020b8c3e8f6264d9e8cdc1d37db6.json  query-dae4e8fe37ab9e71be49ccfda4cd101b0be7d470da731625b2da255c4e16fd3a.json  query-dcd79519fef773576f53e1dd21933eba382c3394ac460731686329a2f84fd870.json  query-dd57ab255226609c1a8aaecae54ece0ea719edc8387b7abbffea0bb373c609b9.json  (+7 more)
scheduler/integrations/: docker-compose.yml
scheduler/src/: main.rs  telemetry.rs
scheduler/tests/: api.rs  collective_team_scheduling.rs  group_team_scheduling.rs  round_robin_scheduling.rs
(+748 files in other folders)
