
[workspace]
members = ["bins/*", "crates/*", "clients/rust"]
resolver = "2"

[workspace.dependencies]
nittei_api = { path = "crates/api" }
nittei_api_structs = { path = "crates/api_structs" }
nittei_domain = { path = "crates/domain" }
nittei_infra = { path = "crates/infra" }
nittei_utils = { path = "crates/utils" }
nittei_sdk = { path = "clients/rust" }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
print_stdout = "deny"
print_err = "deny"
unwrap_used = "deny"
expect_used = "deny"

[profile.release]
# Can improve slightly the performance at the cost of increased compile time
# https://doc.rust-lang.org/cargo/reference/profiles.html#lto
lto = "thin"
# https://doc.rust-lang.org/cargo/reference/profiles.html#codegen-units
codegen-units = 1
