[package]
name = "nettu_scheduler"
version = "0.1.0"
authors = ["Fredrik Meringdal"]
edition = "2018"
default-run = "nettu_scheduler"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "crates/api",
    "crates/api_structs",
    "crates/domain",
    "crates/infra",
    "crates/utils",
    "clients/rust",
]

[dependencies]
nettu_scheduler_api = { path = "./crates/api" }
nettu_scheduler_domain = { path = "./crates/domain" }
nettu_scheduler_infra = { path = "./crates/infra" }

actix-web = "4.8"

tokio = { version = "1", features = ["full"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "fmt",
    "json",
    "registry",
] }
opentelemetry = { version = "0.23.0", default-features = false, features = [
    "trace",
] }
opentelemetry_sdk = { version = "0.23.0", features = ["rt-tokio"] }
tracing-opentelemetry = "0.24.0"
opentelemetry-otlp = { version = "=0.16.0", features = [
    "reqwest-client",
    "reqwest-rustls",
    "http-proto",
    "tls",
] }
tracing-bunyan-formatter = "0.3"

openssl-probe = "0.1.2"
chrono = "0.4.19"
chrono-tz = "0.5.3"

[dev-dependencies]
nettu_scheduler_sdk = { path = "./clients/rust" }
