[package]
name = "nettu_scheduler"
version = "0.1.0"
authors = ["Fredrik Meringdal"]
edition = "2018"
default-run = "nettu_scheduler"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "crates/api",
    "crates/api_structs",
    "crates/domain",
    "crates/infra",
    "crates/utils",
    "clients/rust",
]

[dependencies]
nettu_scheduler_api = { path = "./crates/api" }
nettu_scheduler_domain = { path = "./crates/domain" }
nettu_scheduler_infra = { path = "./crates/infra" }
actix-web = "4.8"
tracing = "0.1.19"
tracing-subscriber = { version = "0.2.12", features = [
    "env-filter",
    "fmt",
    "json",
] }
openssl-probe = "0.1.2"
chrono = "0.4.19"
chrono-tz = "0.8.1"

[dev-dependencies]
nettu_scheduler_sdk = { path = "./clients/rust" }
