[package]
name = "nittei"
version = "0.1.0"
authors = ["Fredrik Meringdal"]
edition = "2018"
default-run = "nittei"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "crates/api",
    "crates/api_structs",
    "crates/domain",
    "crates/infra",
    "crates/utils",
    "clients/rust",
]

[dependencies]
nittei_api = { path = "./crates/api" }
nittei_domain = { path = "./crates/domain" }
nittei_infra = { path = "./crates/infra" }

anyhow = "1.0"

actix-web = "4.8"

tokio = { version = "1", features = ["full"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "fmt",
    "json",
    "registry",
] }
opentelemetry = { version = "0.23.0", default-features = false, features = [
    "trace",
] }
opentelemetry_sdk = { version = "0.23.0", features = ["rt-tokio"] }
tracing-opentelemetry = "0.24.0"
opentelemetry-otlp = { version = "=0.16.0", features = [
    "reqwest-client",
    "reqwest-rustls",
    "http-proto",
    "tls",
] }
opentelemetry-datadog = { version = "0.11.0", features = ["reqwest-client"] }

openssl-probe = "0.1.2"
chrono = "0.4.19"
chrono-tz = "0.8.1"

[dev-dependencies]
nittei_sdk = { path = "./clients/rust" }

[workspace.lints.rust]
unsafe_code = "forbid"

[lints.clippy]
print_stdout = "deny"
print_err = "deny"
unwrap_used = "deny"
expect_used = "deny"

[workspace.lints.clippy]
print_stdout = "deny"
print_err = "deny"
unwrap_used = "deny"
expect_used = "deny"
