[package]
name = "nittei"
version = "0.1.0"
authors = ["Fredrik Meringdal", "Meetsmore"]
edition = "2021"
default-run = "nittei"

[lints]
workspace = true

[dependencies]
nittei_api = { workspace = true }
nittei_domain = { workspace = true }
nittei_infra = { workspace = true }
nittei_utils = { workspace = true }

anyhow = "1.0"

actix-web = "4.8"

tokio = { version = "1", features = ["full"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "fmt",
    "json",
    "registry",
] }
opentelemetry = { version = "0.23.0", default-features = false, features = [
    "trace",
] }
opentelemetry_sdk = { version = "0.23.0", features = ["rt-tokio"] }
tracing-opentelemetry = "0.24.0"
opentelemetry-otlp = { version = "=0.27.0", features = [
    "reqwest-client",
    "reqwest-rustls",
    "http-proto",
    "tls",
] }
opentelemetry-datadog = { version = "0.11.0", features = ["reqwest-client"] }

openssl-probe = "0.1.2"
chrono = "0.4.19"
chrono-tz = "0.8.1"

# Use Jemalloc only for musl-64 bits platforms
# The default MUSL allocator is known to be slower than Jemalloc
# E.g. https://github.com/BurntSushi/ripgrep/commit/03bf37ff4a29361c47843369f7d3dc5689b8fdac
[target.'cfg(all(target_env = "musl", target_pointer_width = "64"))'.dependencies.tikv-jemallocator]
version = "0.5"


##################
# Dev dependencies
[dev-dependencies]
nittei_sdk = { workspace = true }
futures = "0.3"
test-log = "0.2"
serde_json = "1.0"
