[package]
name = "nittei"
version = "0.1.0"
authors = ["Fredrik Meringdal", "Meetsmore"]
edition = "2024"
default-run = "nittei"

[lib]
name = "nittei"
path = "src/lib.rs"

[[bin]]
name = "nittei"
path = "src/main.rs"

[[bin]]
name = "nittei-migrate"
path = "src/bin/migrate.rs"

[lints]
workspace = true

[dependencies]
nittei_api = { workspace = true }
nittei_domain = { workspace = true }
nittei_infra = { workspace = true }
nittei_utils = { workspace = true }

anyhow = "1.0"

axum = "0.8"

tokio = { version = "1", features = ["full"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "fmt",
    "json",
    "registry",
] }
opentelemetry = { version = "0.30.0", default-features = false, features = [
    "trace",
] }
opentelemetry_sdk = { version = "0.30.0", features = ["rt-tokio"] }
tracing-opentelemetry = "0.31.0"
opentelemetry-otlp = { version = "0.30.0", features = [
    "reqwest-client",
    "reqwest-rustls",
    "http-proto",
    "tls",
] }
opentelemetry-datadog = { version = "0.18.0", features = ["reqwest-client"] }
reqwest = { version = "0.12", default-features = false, features = [
    "http2",
    "json",
    "rustls-tls",
] }

chrono = "0.4.39"
chrono-tz = "0.10.1"

# Use the `jemallocator` crate to use jemalloc as the global allocator.
tikv-jemallocator = "0.6"
mimalloc = "0.1.43"


##################
# Dev dependencies
[dev-dependencies]
nittei_sdk = { workspace = true }
futures = "0.3"
test-log = "0.2"
serde_json = "1.0"
