[package]
name = "nittei_api"
version = "0.1.0"
authors = ["Meetsmore", "Fredrik Meringdal"]
edition = "2024"

[lints]
workspace = true

[dependencies]
nittei_api_structs = { workspace = true }
nittei_domain = { workspace = true }
nittei_infra = { workspace = true }
nittei_utils = { workspace = true }

axum = { version = "0.8.1", features = ["macros"] }
axum-valid = { version = "0.23.0", features = ["into_json"] }
tower-http = { version = "0.6.2", features = [
  "cors",
  "compression-full",
  "decompression-full",
  "trace",
  "sensitive-headers",
  "catch-panic",
] }
tower = "0.5.2"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
validator = { version = "0.20", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = [
  "http2",
  "json",
  "rustls-tls",
] }
async-trait = "0.1.83"
rrule = "0.13.0"
chrono = { version = "0.4.19", features = ["serde"] }
chrono-tz = "0.9.0"
anyhow = "1.0"
jsonwebtoken = "7"
thiserror = "2.0"
tokio = { version = "1.0", features = ["full"] }

opentelemetry = "0.28.0"
opentelemetry-http = "0.28.0"
tracing-opentelemetry = "0.29.0"
tracing = "0.1.25"
tracing-futures = "0.2.5"

[dev-dependencies]
serial_test = "*"
