[package]
name = "nittei_api"
version = "0.1.0"
authors = ["Meetsmore", "Fredrik Meringdal"]
edition = "2024"

[lints]
workspace = true

[dependencies]
nittei_api_structs = { workspace = true }
nittei_domain = { workspace = true }
nittei_infra = { workspace = true }
nittei_utils = { workspace = true }

tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

axum = { version = "0.8", features = ["macros"] }
axum-valid = { version = "0.24", features = ["into_json"] }
tower-http = { version = "0.6", features = [
  "cors",
  "compression-full",
  "decompression-full",
  "trace",
  "sensitive-headers",
  "catch-panic",
] }
tower = "0.5"
utoipa = { version = "5.3", features = ["axum_extras", "uuid", "chrono"] }
utoipa-axum = { version = "0.2" }
utoipa-swagger-ui = { version = "9.0", features = ["axum", "vendored"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

validator = { version = "0.20", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = [
  "http2",
  "json",
  "rustls-tls",
] }

rrule = "0.14"
chrono = { version = "0.4.39", features = ["serde"] }
chrono-tz = "0.10.1"

jsonwebtoken = "9"

anyhow = "1.0"
thiserror = "2.0"

opentelemetry = "0.30.0"
opentelemetry-http = "0.30.0"
tracing-opentelemetry = "0.31.0"
tracing = "0.1"
tracing-futures = "0.2"
prometheus = "0.14"

[dev-dependencies]
serial_test = "*"
