[package]
name = "nittei_api_structs"
version = "0.3.1"
description = "Nittei API types"
license = "MIT"
authors = ["Fredrik Meringdal"]
edition = "2024"

[lints]
workspace = true

[dependencies]
nittei_domain = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
validator = { version = "0.20", features = ["derive"] }
chrono = { version = "0.4.19", features = ["serde"] }
chrono-tz = { version = "0.9.0", features = ["serde"] }
uuid = { version = "1.1.2", features = ["serde"] }
ts-rs = { version = "10.1.0", features = [
  "uuid-impl",
  "chrono-impl",
  "serde-json-impl",
  "no-serde-warnings",
] }

[dev-dependencies]
serde_urlencoded = "0.7.1"
