[package]
name = "nittei_domain"
version = "0.2.1"
description = "Nittei domain"
license = "MIT"
authors = ["Fredrik Meringdal"]
edition = "2024"

[lints]
workspace = true

[dependencies]
nittei_utils = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rrule = "0.14"
chrono = { version = "0.4.39", features = ["serde"] }
chrono-tz = { version = "0.10.1", features = ["serde"] }
anyhow = "1.0"
url = "2.3"
uuid = { version = "1.1", features = ["serde", "v4"] }
jsonwebtoken = "9"
thiserror = "2.0"
itertools = "0.14"
rand = "0.9"
tracing = "0.1"
ts-rs = { version = "11.0", features = [
  "uuid-impl",
  "chrono-impl",
  "serde-json-impl",
] }
validator = { version = "0.20", features = ["derive"] }
utoipa = { version = "5.3", features = ["uuid", "chrono"] }
