[package]
name = "nittei_infra"
version = "0.1.0"
authors = ["Fredrik Meringdal"]
edition = "2021"

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nittei_utils = { workspace = true }
nittei_domain = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1.83"
chrono = { version = "0.4.19", features = ["serde"] }
chrono-tz = { version = "0.8.1", features = ["serde"] }
anyhow = "1.0"
tokio = { version = "1", features = ["macros"] }
tracing = "0.1.25"
reqwest = { version = "0.12", features = ["json"] }
uuid = { version = "1.1.2", features = ["serde"] }
futures = "0.3"
sqlx = { version = "0.8.2", features = [
  "runtime-tokio",
  "postgres",
  "uuid",
  "json",
  "chrono",
] }
