[package]
name = "nettu_scheduler_sdk"
version = "0.4.1"
description = "Nettu scheduler sdk"
license = "MIT"
authors = ["Fredrik Meringdal"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nettu_scheduler_api_structs = { path = "../../crates/api_structs", version = "0.3.1" }
nettu_scheduler_domain = { path = "../../crates/domain", version = "0.2.1" }
reqwest = { version = "0.12", features = ["json"] }
serde = "1"
chrono = { version = "0.4.19", features = ["serde"] }
chrono-tz = { version = "0.8.1", features = ["serde"] }
