[package]
name = "nettu_scheduler_utils"
description = "Nettu scheduler utils"
license = "MIT"
version = "0.1.0"
authors = ["Fredrik Meringdal"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.0"
config = "0.14"
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.5.0"
